# omixai_tpd_ui

./: .gitignore  README.md  RUN.md
backend/: .env.example  README.md  pyproject.toml  requirements.txt
backend/app/: auth.py  config.py  data_loader.py  db.py  email_util.py  main.py  manage.py  models.py  ownership.py  schemas.py
backend/app/api/v1/: admin.py  auth.py  drugs.py  files.py  plates.py  proteins.py
backend/app/domain/: dashboard.py  drug_info.py  phenome.py  protein_info.py  synthesize.py
backend/scripts/: crawl_drug_info.py
design/: style_guide.md
design/design_01/: README.md  styles.css
design/design_02/: README.md  index.html  styles.css
docs/: guide_dashboard.md  handoff-2026-06-06.md  handoff-v2.2-responsive.md  handoff-v2.3-login.md  landscape-anchor-and-ppi-community-isolation.md  scientific-dashboard-redesign-v1.md  time-comparison-4h-24h-design.md  viz-algorithm-audit-2026-06.md
frontend/: HANDOFF.md  index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
frontend/src/: main.tsx  router.tsx
frontend/src/api/: admin.ts  auth.ts  client.ts  queries.ts
frontend/src/components/: AppShell.tsx  LangToggle.tsx  LoadingBlock.tsx  PanelCard.tsx  RequireAuth.tsx  Sidebar.tsx  StatusBadge.tsx  ThemeToggle.tsx  TopbarMetaRow.tsx
frontend/src/hooks/: useTheme.ts
frontend/src/routes/: AdminPage.tsx  DashboardPage.tsx  DrugSummaryPage.tsx  GuidePage.tsx  LoginPage.tsx  NotFoundPage.tsx  PlateListPage.tsx  SetPasswordPage.tsx  (+1 more)
scripts/: migrate_arrived_data.py  migrate_v2.py  overlay_ppi_json.py  seed_moa_bars.py
(+31 files in other folders)
